# libbitcast

./: CMakeLists.txt  README.md
cmake/: fetch_gtest.cmake
include/: bitcast.h
src/: bitcast.c
test/: CMakeLists.txt  bitcastTest.cpp
